tests/assembler/fail/test7.ial
field int32 missingStorageSpecifier;
